mdapipkg/objects/GL_Coding__c.object
<CustomObject>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>17</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Used for running deferrals</description>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Payment Related</fullName>
                </value>
                <value>
                    <fullName>A/R - Standard</fullName>
                </value>
                <value>
                    <fullName>A/R - Long Term</fullName>
                </value>
                <value>
                    <fullName>Unapplied</fullName>
                </value>
                <value>
                    <fullName>Deferred - Membership and Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Deferred - Event by Date</fullName>
                </value>
                <value>
                    <fullName>Deferred - Event Other</fullName>
                </value>
                <value>
                    <fullName>A/P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Sub_Account_Number__c</fullName>
        <label>GL Sub-Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Account_Number__c</fullName>
        <label>Sub-Account Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>GL Coding</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCOD-{0000}</displayFormat>
        <label>GL Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Coding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>